Spelling of Duesseldorf and proper captions for the images

--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -62,7 +62,7 @@
               <li>
                 <a href="#section9" class="nav-link link-dark">
                   <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
-                  iGEM Dusseldorf
+                  iGEM Duesseldorf
                 </a>
               </li>
 
@@ -80,22 +80,34 @@
                 <div class="m-5 mb-16">
                     <p class="mt-5 MAIN-STUFF" id="section1">1. iGEM ABOA, Turku, Finland (May 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">iGEM season ropes in several important days that have contributed towards the well- being of our planet. World Environment Day (June 5) is a good day to be reminded of what the Earth is enduring and to always be showing our support. MIT-MAHE participated in a collaborative mission, initiated by ABOA where we fashioned a “Let us Save Our Planet From TCC” poster which portrayed our mission while aligning with the Environment Day spirit. </p>
+
+                    <figure>
                     <iframe title="MIT-MAHE: ABOA Collaboration (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/6d0638ef-204a-4426-8b8e-96b0d63e7313" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
-                    <p class="sub-stuff" >Video made for World Environment Day in collaboration with iGEM ABOA</p>
+                    <figcaption style="text-align:center"> <i> Video made for World Environment Day in collaboration with iGEM ABOA </i> </figcaption>
+                    </figure>
                     <p class="mt-5 MAIN-STUFF" id="section2">2. Maastricht iGEM, MSP Maastricht, Maastricht, Netherlands (June 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">Working on a project is a long process. It requires dedication and hard work that needs to be put in and also comes with a sense of pride. However throughout this process, it can also be very easy to lose light of our initial mission and get demotivated. One thing that reminds us of how fun our work actually is, is music. MSP Maastricht brought together teams from all across the world to build a musical playlist that made everyday lab seem more like a party and less like work. It helped our team raise morale and meet our deadlines more efficiently while being less stressed. Listening to what different teams love to listen plays an imperative role in soothing our nerves and carrying the project forward.</p>
+                    <figure>
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/maastricht.jpg" class="img-fluid rounded mx-auto d-block mt-4">
-                    <p class="sub-stuff" ">Playlist made by iGEM Maastricht as a collaborative effort with other teams</p>
+                    <figcaption style="text-align:center"> <i> Playlist made by iGEM Maastricht as a collaborative effort with other teams </i> </figcaption>
+                    </figure>
                     <p class="mt-3 MAIN-STUFF" id="section3">3. Penn State iGEM, Pennsylvania State University, Pennsylvania, USA (July 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">The iGEM team from Penn State involved creating a diverse puzzle and gave us a platform to show off our creativity and identity. MIT-MAHE contributed to this global puzzle by sending in the project logo curated by our Graphics team which highlights our creative thinking and resembles our mission. It brings together diverse teams from all over the globe who aim at achieving one common goal- application of synthetic biology to find sustainable solutions to various problems around the world.</p>
+                    <figure>
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/penn-state.jpg" class="img-fluid rounded mx-auto d-block mt-4">
-                    <p class="sub-stuff">Project CarbanEl logo—Sent to the iGEM team of Penn State as an effort to create a diverse global puzzle</p>
+                    <figcaption style="text-align:center"> <i> Project CarbanEl logo—Sent to the iGEM team of Penn State as an effort to create a diverse global puzzle </i> </figcaption>
+                    </figure>
+                  
                     <p class="mt-3 MAIN-STUFF" id="section4">4. iGEM McGill, McGill University, Montreal, Quebec, Canada (July 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">The McGill iGEM team came up with the idea of a Biome Book to document and showcase different proteins that were special to different teams. MIT-MAHE took part in this collaboration and sent in our novel amidase from <i>Ochrobactrum sp TccA</i>, which is our special protein. This interesting collaboration gave us the opportunity to broaden our horizons to the proteins that different teams are engineering and to recite to other teams our protein and its story!</p>
+                    <figure>
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/mcgill.jpg" class="img-responsive rounded mx-auto d-block mt-4">
-                    <p class="sub-stuff">Novel TccA amidase enzyme from Ochrobactrum sp.TCC-2</i></p>
+                      <figcaption style="text-align:center"> <i> Novel TccA amidase enzyme from Ochrobactrum sp.TCC-2</i> </figcaption>
+                    </figure>
+
                     <p class="mt-3 MAIN-STUFF" id="section5">5. iGEM IISER Bhopal, IISER Bhopal, Bhopal, Madhya Pradesh, India (July 2023) <br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> All India iGEM Meet (AIIM) is the event that hosts all Indian iGEM teams for a meetup and a smaller scale experience of the Grand Jamboree. It helped us understand how our ideas are flowing and to interact with various teams and get to learn their thought processes. MIT-MAHE got the opportunity to contribute towards this event through social media campaigning and graphics. To be able to curate these on a nation-wide scale was wonderful and helped our team to get a chance to enjoy the experience closely and also show off our creative skills. </p>
+                    <figure>
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6">
@@ -107,6 +119,8 @@
                         </div>
                       </div>
                     </div>
+                    <figcaption style="text-align:center"> <i> AIIM posters designed by the graphics team of iGEM MIT-MAHE </i> </figcaption>
+                    </figure>
                     <p class="mt-3 MAIN-STUFF" id="section6">6. iGEM NTHU, NTHU, Taiwan (August 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The iGEM map collaboration initiated by NTHU Taiwan allowed the personification of our projects- a unique perspective that draws the parallel between the various components that can be viewed as imperative characters in our story- our project. MIT-MAHE chose to present CarbanEl, our main solution enzyme as the character for the map- the hero of our story. The map lets the teams find out about other teams’ projects while telling a story about their own projects- using the logos and other parts as metaphors. </p>
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/penn-state.jpg" class="img-responsive rounded mx-auto d-block mt-4">
@@ -119,12 +133,14 @@
             </div>    
                     <p class="mt-3 MAIN-STUFF" id="section8">8. iGEM IIT-Delhi, Indian Institute of Technology, Delhi, India<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The collaboration with iGEM IIT-Delhi was really special to us. Getting a chance to collaborate with a team working on a similar project and learning more about it was such an amazing experience. Together, we hosted a 3-day “Bioremediation Conclave” and a “BioArt Competition” open to the community and iGEM teams from all over the globe. The efforts that went behind the planning and organization of these events, frequent meetings and documentation by both the teams and finally, the day of the events were commendable!</p>
-                    <img style="scale:0.23;" src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iitd-3.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
+                    <figure>
+                    <img style="width: 23%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iitd-3.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-4.png" class="img-responsive rounded mx-auto d-block mt-4">
-                    <p class="sub-stuff"">Regular meetings held with the team members of IIT Delhi and MIT-MAHE to plan the 3-day bioremediation conclave</i></p>
+                    <figcaption style="text-align:center"> <i> Regular meetings held with the team members of IIT Delhi and MIT-MAHE to plan the 3-day bioremediation conclave </i> </figcaption>
+                    </figure>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;" class="mt-2"> <i>Bioremediation Conclave</i> </p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The “Bioremediation Conclave” had speakers from various reputed institutions and start-ups in the field of bioremediation on the first two days, while the 3rd day was specially dedicated for iGEM teams to showcase their projects and get insights from the Chief Guest. The audience was really interactive with the speakers and teams, and that made these webinars all the more fun. The event was a great success and a learning experience like no other.  </p>
-                    
+                  <figure>
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6">
@@ -147,11 +163,13 @@
                         </div>
                       </div>
                     </div>
+                    <figcaption style="text-align:center"> <i> Posters for the Bioremediation Conclave designed by the graphics team of MIT-MAHE </i> </figcaption>
+                    </figure>
 
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;" class="mt-3"> <i>BioArt Competition</i> </p>
 
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The “BioArt competition” conducted by us was an initiative to promote and celebrate the diversity and heritage of biology enthusiasts from all over the world while also addressing real-world problems through art. This way, we made science accessible to people from the non-scientific community as well, sparking a curiosity in them to learn more about it. </p>
-
+                    <figure>
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6">
@@ -159,13 +177,15 @@
                         </div>
                         <div class="col-md-6">
                           <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-2.png" class="img-fluid mt-4" alt="Image 2">
-                          <p class="sub-stuff">Posters for the BioArt Competition publicity and results announcement</i></p>
                         </div>
                       </div>
                     </div>
+                    <figcaption style="text-align:center"> <i> Posters for the BioArt Competition publicity and results announcement </i> </figcaption>
+                    </figure>
 
-                    <p class="mt-3 MAIN-STUFF" id="section9">9. iGEM Dusseldorf, Heinrich-Heine University, Dusseldorf, Germany (September 2023)<br></p>
+                    <p class="mt-3 MAIN-STUFF" id="section9">9. iGEM Duesseldorf, Heinrich-Heine University, Duesseldorf, Germany (September 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> One of the most exciting parts of the iGEM journey is the exposure that comes with it and the friends that we make along the way. Explaining our projects to the other teams was made into an exciting activity by the iGEM team from Heinrich-Heine-University Düsseldorf. A postcard briefing the other teams about our project and a creative way to express the same and receiving postcards from other teams describing their projects was a heartwarming and fun-filled experience. The highlight of this project is the idea to circulate postcards, a thing of the past for our generation, which is a simple yet effective reminder to always be remembering and grateful for our roots. </p>
+                    <figure>
                     <div class="container">
                       <div class="row">
                         <div class="col-md-6">
@@ -178,7 +198,8 @@
                       </div>
                     </div>
                   </div>
-
+                  <figcaption style="text-align:center"> <i> Postcard designed by team MIT-MAHE </i> </figcaption>
+                  </figure>
                 <div class='m-5' style="height: 50px">
                 </div>
               </div>
