--- a/wiki/pages/engagement-collaborations.html
+++ b/wiki/pages/engagement-collaborations.html
@@ -81,7 +81,7 @@
                     <p class="mt-5 MAIN-STUFF" id="section1">1. iGEM ABOA, Turku, Finland (May 2023)<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;">iGEM season ropes in several important days that have contributed towards the well- being of our planet. World Environment Day (June 5) is a good day to be reminded of what the Earth is enduring and to always be showing our support. MIT-MAHE participated in a collaborative mission, initiated by ABOA where we fashioned a “Let us Save Our Planet From TCC” poster which portrayed our mission while aligning with the Environment Day spirit. </p>
 
-                    <figure>
+                    <figure style="text-align:center">
                     <iframe title="MIT-MAHE: ABOA Collaboration (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/6d0638ef-204a-4426-8b8e-96b0d63e7313" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
                     <figcaption style="text-align:center"> <i> Video made for World Environment Day in collaboration with iGEM ABOA </i> </figcaption>
                     </figure>
@@ -115,7 +115,6 @@
                         </div>
                         <div class="col-md-6">
                           <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iiser-bhopal-1.png" class="img-fluid mt-4" alt="Image 2">
-                          <p class="sub-stuff" >AIIM posters designed by the graphics team of iGEM MIT-MAHE</i></p>
                         </div>
                       </div>
                     </div>
@@ -134,7 +133,7 @@
                     <p class="mt-3 MAIN-STUFF" id="section8">8. iGEM IIT-Delhi, Indian Institute of Technology, Delhi, India<br></p>
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;"> The collaboration with iGEM IIT-Delhi was really special to us. Getting a chance to collaborate with a team working on a similar project and learning more about it was such an amazing experience. Together, we hosted a 3-day “Bioremediation Conclave” and a “BioArt Competition” open to the community and iGEM teams from all over the globe. The efforts that went behind the planning and organization of these events, frequent meetings and documentation by both the teams and finally, the day of the events were commendable!</p>
                     <figure>
-                    <img style="width: 23%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iitd-3.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
+                    <img style="width: 45%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iitd-3.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
                     <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-4.png" class="img-responsive rounded mx-auto d-block mt-4">
                     <figcaption style="text-align:center"> <i> Regular meetings held with the team members of IIT Delhi and MIT-MAHE to plan the 3-day bioremediation conclave </i> </figcaption>
                     </figure>
@@ -159,12 +158,11 @@
                         </div>
                         <div class="col-md-6">
                           <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-iit-delhi-5.png" class="img-fluid mt-4" alt="Image 2">
-                          <p class="sub-stuff" >Posters for the Bioremediation Conclave designed by the graphics team of MIT-MAHE</p>
                         </div>
                       </div>
                     </div>
                     <figcaption style="text-align:center"> <i> Posters for the Bioremediation Conclave designed by the graphics team of MIT-MAHE </i> </figcaption>
-                    </figure>
+                  </figure>
 
                     <p style="font-family: 'Poppins', sans-serif; font-size: 20px;" class="mt-3"> <i>BioArt Competition</i> </p>
 
@@ -193,7 +191,6 @@
                         </div>
                         <div class="col-md-6">
                           <img src="https://static.igem.wiki/teams/4641/wiki/collaboration-images/collaboration-images/igem-dusseldorf-2.png" class="img-fluid mt-4" alt="Image 2" style="border: 3px solid #555">
-                          <p class="sub-stuff"> Postcard designed by team MIT-MAHE</i></p>
                         </div>
                       </div>
                     </div>
