Updated team page

--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -50,8 +50,7 @@
               Team Lead, Wet Lab Member
               <p>Aditi is an reliable team leader with a love for Bharatnatyam dancing. Her tireless work ethic and
                 innovative ideas propel her team to do more everyday. She has a knack for explaining tricky concepts
-                but
-                is infamous for going off on unrelated tangents as well.</p>
+                but is infamous for going off on unrelated tangents as well.</p>
             </div>
           </div>
           <div class="image">
@@ -60,12 +59,9 @@
               <h3>Anandita Rawat</h3><br>
               Team Manager,Human Practices and Management Member
               <p>Anandita is a motivated and diligent member of our team who also infuses a dose of lightheartedness
-                and
-                humor into work everyday. At any time of the day, she's blasting her favourite rock hits — you'll
-                find
-                her listening to The Beatles or Dire Straits! An avid coffee enthusiast, she can't drink black
-                coffee
-                without a dash of cinnamon in it.</p>
+                and humor into work everyday. At any time of the day, she's blasting her favourite rock hits — you'll
+                find her listening to The Beatles or Dire Straits! An avid coffee enthusiast, she can't drink black
+               coffee without a dash of cinnamon in it.</p>
             </div>
           </div>
 
@@ -75,8 +71,7 @@
               <h3>I Vidhula Jessica </h3><br>
               Head of Wet Lab
               <p>Jessica is a night owl but dedicated enough to her position as Wet Lab Head to be an early bird.
-                She's
-                empathetic, loyal, hardworking and organized. On the off chance she has free time, you can find her
+                She's empathetic, loyal, hardworking and organized. On the off chance she has free time, you can find her
                 curled up in bed watching Big Bang theory with a hot plate of maggi!</p>
             </div>
           </div>
@@ -87,8 +82,7 @@
               <h3>Ilora Samanta </h3><br>
               Head of Dry Lab
               <p>Ilora is a dedicated workaholic known for her unwavering commitment to dry lab. While she shies
-                away
-                from socializing and management tasks, her exceptional work ethic and approachability make her a
+                away from socializing and management tasks, her exceptional work ethic and approachability make her a
                 valuable mentor for juniors seeking guidance in their roles.</p>
             </div>
 
@@ -100,12 +94,9 @@
               Head of H&S
               <p>Meet Dharmika, our hardware and software head. She's always eager to work alongside her colleagues,
                 ensuring that no task is too daunting when faced together. Her innate ability to keep everyone in
-                the
-                loop developed transparency and shared understanding in our team. In her free time, she loves to
-                dance
-                and enjoys a game of tennis. If you ever want to win her heart, a plate of biryani is the surefire
-                way
-                to do it!</p>
+                the loop developed transparency and shared understanding in our team. In her free time, she loves to
+                dance and enjoys a game of tennis. If you ever want to win her heart, a plate of biryani is the surefire
+                way to do it!</p>
             </div>
           </div>
           <div class="image">
@@ -124,8 +115,7 @@
               <h3>Pooja Agarwal </h3><br>
               Co-Head of Human Practices
               <p>Pooja is a hardworking, meticulous and trustworthy. She is curious, constantly questioning and
-                learning
-                more. Her passion towards her work motivates the entire team. In her free time, and sometimes even
+                learning more. Her passion towards her work motivates the entire team. In her free time, and sometimes even
                 during classes, you'll find her fast asleep!</p>
             </div>
           </div>
@@ -135,8 +125,7 @@
               <h3>Shreya Varma</h3><br>
               Co-Head of Human Practices
               <p>Shreya loves discussing all things biology. Off-duty, she's on the football field or savoring food.
-                Her
-                talkative and passionate nature is invaluable with stakeholders.</p>
+                Her talkative and passionate nature is invaluable with stakeholders.</p>
             </div>
           </div>
           <div class="image">
@@ -145,13 +134,10 @@
               <h3>Aditi Kini </h3><br>
               Head of Graphics and Social Media
               <p>Aditi loves presenting herself through her art- apart from design she's also an avid dancer. She's
-                a
-                huge fan of The Office and playing it in the background is her go to move while working to make it
-                more
-                fun and "motivate" her. She is constantly on her phone, making her a perfect fit as our social media
+                a huge fan of The Office and playing it in the background is her go to move while working to make it
+                more fun and "motivate" her. She is constantly on her phone, making her a perfect fit as our social media
                 head! Aditi is almost always cheerful and loves helping with morale and keeping everyone's mood up
-                in
-                the skies!</p>
+                in the skies!</p>
             </div>
           </div>
           <div class="image">
@@ -160,8 +146,7 @@
               <h3>Manu Upadhye</h3><br>
               Wet Lab
               <p>With a strong hatred towards Times New Roman and unending love for Dichloromethane, Manu is easily
-                one
-                of the integral parts of the wet lab team. His precise and quick calculations with his phenomenal
+                one of the integral parts of the wet lab team. His precise and quick calculations with his phenomenal
                 working lab skills are what makes him so important.</p>
             </div>
           </div>
@@ -182,10 +167,8 @@
               <h3>Sonal Keni</h3><br>
               Research
               <p>Sonal's habit of going down obscure Wikipedia rabbit holes serves her well in the Research
-                subsystem.
-                In her free time, she enjoys painting, binge-watching Netflix, and adding things she can't afford to
-                her
-                Amazon wishlist. </p>
+                subsystem. In her free time, she enjoys painting, binge-watching Netflix, and adding things she can't afford to
+                her Amazon wishlist. </p>
             </div>
           </div>
           <div class="image">
@@ -195,8 +178,7 @@
               Wet Lab
               <p>Though seemingly a tad reserved, Nidhi is a bundle of warmth. She is a passionate singer and her
                 enthusiasm is downright infectious. From sizzling street food to gourmet feasts, Nidhi's love for
-                food
-                knows no bounds.</p>
+                food knows no bounds.</p>
             </div>
           </div>
           <div class="image">
@@ -205,10 +187,8 @@
               <h3>Rajat Sreeraj</h3><br>
               Wet Lab
               <p>Rajat is an amicable yet quiet person of trustworthy character. He enjoys working in the project
-                lab
-                and is very passionate about all things synthetic biology. He's a huge history nerd and enjoys
-                reading
-                comic books.</p>
+                lab and is very passionate about all things synthetic biology. He's a huge history nerd and enjoys
+                reading comic books.</p>
             </div>
           </div>
           <div class="image">
@@ -217,10 +197,8 @@
               <h3>Richa Rao</h3><br>
               Dry Lab
               <p>Richa is one of our most dedicated members. She enjoys reading as well as everything music and
-                always
-                has something playing in the background. A team player through and through, she is an excellent
-                addition
-                to our team.</p>
+                always has something playing in the background. A team player through and through, she is an excellent
+                addition to our team.</p>
             </div>
           </div>
           <div class="image">
@@ -230,8 +208,7 @@
               Wet Lab
               <p>Aritro is a photographer, cinephile and musician. He's literally Ryan Gosling. When he's not in the
                 lab, he can be found discussing politics, history and philosophy with Rajat. He's cute and listens
-                to
-                The Smiths. A wild Real Madrid supporter.</p>
+                to The Smiths. A wild Real Madrid supporter.</p>
             </div>
           </div>
           <div class="image">
@@ -250,8 +227,7 @@
               Dry Lab
               <p>Aditi Srivastava is the dry lab team's artistic maestro! Often you'll catch her with her gym bag
                 clinging to her sides and random music playlist blasting in her headphones. She is a great listener,
-                if
-                you ever feel blue she'll make sure to make your day better. </p>
+                if you ever feel blue she'll make sure to make your day better. </p>
             </div>
           </div>
           <div class="image">
@@ -271,8 +247,7 @@
               Hardware and Software
               <p>Nivetha loves drinking teas , you'd never see her without her flask. She ideates and processes
                 information quickly, much like you'd gulp a refreshing drink on a scorching summer day. In her
-                pastime,
-                she sketches or keeps praticing yoga to forget the day away.
+                pastime, she sketches or keeps praticing yoga to forget the day away.
               </p>
             </div>
           </div>
@@ -294,8 +269,7 @@
               Research
               <p>Often working diligently behind the scenes, Janani is a quiet, hardworking, and amicable person who
                 prefers a calm and focused approach to her tasks. Not a single day goes by without her jamming to
-                K-pop
-                songs and binging K-dramas. </p>
+                K-pop songs and binging K-dramas. </p>
             </div>
           </div>
           <div class="image">
@@ -304,8 +278,7 @@
               <h3>Saurav Arippara Vinodh </h3><br>
               Wiki and Web Development
               <p>Saurav is an avid movie watcher who's living on a healthy diet of kurkure and noodles. He's also
-                always
-                trying to read manga in the middle of class. He loves listening to indie music. </p>
+                always trying to read manga in the middle of class. He loves listening to indie music. </p>
             </div>
           </div>
           <div class="image">
@@ -314,8 +287,7 @@
               <h3>Akanksha Kelkar</h3><br>
               Dry Lab
               <p>Akanksha is a dedicated and diligent professional. She excels in mentoring her juniors,
-                consistently
-                exceeding expectations in her assigned tasks. With her infectious sense of humor, she's the one who
+                consistently exceeding expectations in her assigned tasks. With her infectious sense of humor, she's the one who
                 never fails to bring a smile to your face.</p>
             </div>
           </div>
@@ -325,8 +297,7 @@
               <h3>Anika Jha</h3><br>
               Wiki and Web Development
               <p>Anika is a diligent worker who lets her inner child shine outside the student project. Approachable
-                and
-                responsible, she transforms into a fun and effective teacher once you get to know her, striking the
+                and responsible, she transforms into a fun and effective teacher once you get to know her, striking the
                 perfect work-life balance.</p>
             </div>
           </div>
@@ -338,8 +309,7 @@
               Mentor
               <p>A dreamer, believer and synbio enthusiast. Shreyas is passionate about biology and believes that
                 biology is all about its nitty gritty. This drives him to keep seeking practical solutions to
-                scientific
-                problems. He loves music baking, and reading minds (kidding! XD , but it's good to keep magneto's
+                scientific problems. He loves music baking, and reading minds (kidding! XD , but it's good to keep magneto's
                 helmet
                 close by!</p>
             </div>
@@ -351,10 +321,8 @@
               <h3>Dr.Ritu Raval</h3><br>
               Associate Professor, Department of Biotechnology, Manipal Institute of Technology, Manipal, India.
               <p>Dr. Ritu Raval played a crucial role in guiding us through the design and safety aspects. From
-                regular
-                follow up meetings to involvement in educational outreach activities, her constant guidance and
-                support
-                towards iGEM MIT-MAHE has been pivotal in the success of Project CarbanEl.</p>
+                regular follow up meetings to involvement in educational outreach activities, her constant guidance and
+                support towards iGEM MIT-MAHE has been pivotal in the success of Project CarbanEl.</p>
             </div>
           </div>
           <div class="image">
@@ -378,8 +346,7 @@
               Technology,
               Manipal, India.
               <p>Dr. Kapil Sadani has helped us with Raman Spectroscopy to identify unique peaks that correlate to
-                the
-                structure of Triclocarban(TCC). His advice has helped us improve our certain aspects of our project.
+                the structure of Triclocarban(TCC). His advice has helped us improve our certain aspects of our project.
               </p>
             </div>
           </div>
@@ -391,22 +358,19 @@
               Associate Professor(Research)—Department of Biotechnology, Manipal Institute of Technology, Manipal,
               India.
               <p>"
-                Dr. Chiranjeet Ghosh helped us in the development of ideas with regards to TCC detection and played
-                an
-                important role in troubleshooting experiments involving TCC. "</p>
+                Dr. Chiranjit Ghosh helped us in the development of ideas with regards to TCC detection and played
+                an important role in troubleshooting experiments involving TCC. "</p>
             </div>
           </div>
           <div class="image">
             <img src="https://static.igem.wiki/teams/4641/wiki/meet-the-team/balakrishna.png" alt="Image 6">
 
             <div class="text">
-              <h3>K Balakrishna</h3><br>
+              <h3>Dr. K. Balakrishna</h3><br>
               Associate Professor—Department of Civil Engineering, Manipal Institute of Technology, Manipal, India.
               <p>"Dr. K. Balakrishna played a pivotal role in project ideation. By helping us work on the initial
-                idea
-                our project, he guided us on how to reduce these pollutants in wastewater treatment plants and made
-                us
-                aware on the work that has already been done in on these micro-pollutants.</p>
+                idea our project, he guided us on how to reduce these pollutants in wastewater treatment plants and made
+                us aware on the work that has already been done in on these micro-pollutants.</p>
             </div>
           </div>
         </div>
