--- a/wiki/pages/team.html
+++ b/wiki/pages/team.html
@@ -368,7 +368,7 @@
             <div class="text">
               <h3>Dr. K. Balakrishna</h3><br>
               Associate Professor—Department of Civil Engineering, Manipal Institute of Technology, Manipal, India.
-              <p>"Dr. K. Balakrishna played a pivotal role in project ideation. By helping us work on the initial
+              <p>Dr. K. Balakrishna played a pivotal role in project ideation. By helping us work on the initial
                 idea our project, he guided us on how to reduce these pollutants in wastewater treatment plants and made
                 us aware on the work that has already been done in on these micro-pollutants.</p>
             </div>
