Checking footer icons

--- a/wiki/my-footer.html
+++ b/wiki/my-footer.html
@@ -23,7 +23,9 @@
 
       <!-- Google -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #dd4b39"
-        href="mailto: manipalbiomachines.igem@gmail.com" role="button"><i class="bi bi-envelope"></i></a>
+        href="mailto: manipalbiomachines.igem@gmail.com" role="button"> 
+        <img src="https://static.igem.wiki/teams/4641/wiki/footer-images/envelope-fill.svg" alt="Email Icon" width="16" height="16">
+      </a>
 
       <!-- Instagram -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac"
