adding image icons to the footer

--- a/wiki/my-footer.html
+++ b/wiki/my-footer.html
@@ -29,15 +29,16 @@
 
       <!-- Instagram -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #ac2bac"
-        href="https://www.instagram.com/manipalbiomachines/" role="button"><i class="bi bi-instagram"></i></a>
+        href="https://www.instagram.com/manipalbiomachines/" role="button"> <img src="https://static.igem.wiki/teams/4641/wiki/footer-images/instagram.svg" alt="Email Icon" width="16" height="16">
+      </a>
 
       <!-- Linkedin -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #0082ca"
-        href="https://www.linkedin.com/company/manipal-biomachines/" role="button"><i class="bi bi-linkedin"></i></a>
+        href="https://www.linkedin.com/company/manipal-biomachines/" role="button"> <img src="https://static.igem.wiki/teams/4641/wiki/footer-images/linkedin.svg" alt="Email Icon" width="16" height="16"></a>
       <!-- Github -->
       <a class="btn btn-primary btn-floating m-1" style="background-color: #333333"
         href="https://gitlab.igem.org/2023/mit-mahe/-/blob/main/wiki/pages/engagement-collaborations.html?ref_type=heads"
-        role="button"><i class="bi bi-github"></i></a>
+        role="button"> <img src="https://static.igem.wiki/teams/4641/wiki/footer-images/github.svg" alt="Email Icon" width="16" height="16"></a>
     </section>
     <!-- Section: Social media -->
   </div>
