--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -92,15 +92,15 @@
       infection to the consumer.
     </p>
 
-    <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-1.jpg" class="img-fluid">
+    <img style="width: 45%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-1.jpg" class="img-responsive rounded mx-auto d-block mt-4">
 
     <p class="mt-5 MAIN-STUFF" id="section1">The Journey of TCC</p>
 
     <p class="mt-5 sub-stuff"> PPCPs are consumed globally at a rate of <b>0.1 million tonnes per year</b> and find
       their way into waste water treatment plants [1]. </p>
     <figure>
-      <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-2-graph.jpg" class="img-fluid">
-      <figcaption {font-family: "Poppins", sans-serif;}>Concentrations (ng/L) of PPCPs reported in surface water samples from different countries [9]
+      <img style="width: 45%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-2-graph.jpg" class="img-responsive rounded mx-auto d-block mt-4">
+      <figcaption style="text-align:center"> <i>Concentrations (ng/L) of PPCPs reported in surface water samples from different countries [9] </i>
       </figcaption>
     </figure>
 
@@ -171,7 +171,7 @@
       with amide bond cleavage in carbanilide, dichlorocarbanilide, trichlorocarbanilide.
     </p>
 
-    <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-3.jpg" class="img-fluid">
+    <img style="width: 75%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-3.jpg" class="img-responsive rounded mx-auto d-block mt-4">
 
     <p class="mt-5 MAIN-STUFF" id="section7">Chloroanilines</p>
     <p class="mt-5 sub-stuff"> Once degraded by existing methods, toxic chloroaniline byproducts accumulate in the
@@ -199,7 +199,7 @@
   </ul>
 
     <figure>
-      <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-5.jpg" class="img-fluid"><center><figcaption {font-family: "Poppins", sans-serif;}> <center>Proposed degradation pathway</figcaption>
+      <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-5.jpg" class="img-fluid"><center><figcaption style="text-align:center"> <i>Proposed degradation pathway</i></figcaption>
       </center>
     </figure>
     </p>
