--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -198,9 +198,10 @@
 </li>
   </ul>
 
-    <figure>
-      <img style="width: 70%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-5.jpg" class="img-fluid"><center><figcaption style="text-align:center"> <i>Proposed degradation pathway</i></figcaption>
-      </center>
+<figure>
+      <img style="width: 70%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-5.jpg" class="img-responsive rounded mx-auto d-block mt-4">
+      <figcaption style="text-align:center"> <i>Concentrations (ng/L) of PPCPs reported in surface water samples from different countries [9] </i>
+      </figcaption>
     </figure>
     </p>
 
