--- a/wiki/pages/project-design.html
+++ b/wiki/pages/project-design.html
@@ -119,7 +119,7 @@
         Our gene of interest is TccA, which codes for an amidase enzyme that breaks down TCC into 3,4-dichloroaniline
         and 4-chloroaniline [2]. The gene was from <i> Ochrobactrum sp. TCC-2</i>. The byproducts formed as a result of
         this conversion are also toxic, hence, this singular enzyme could not solve the problem. </p>
-      <img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/mindmap-design.png" class="img-fluid">
+      <img style="width: 70%; height: auto;"  src="https://static.igem.wiki/teams/4641/wiki/design-part-page/mindmap-design.png" class="img-responsive rounded mx-auto d-block mt-4">
 
       <p class="mt-5 MAIN-STUFF"> Choice of Chassis </p>
       <p class="mt-5 sub-stuff" id="section3"> There exist some bacteria that possess natural pathways capable of
@@ -146,8 +146,8 @@
         (3,4,4′-Trichlorocarbanilide) into 3,4-dichloroaniline and 4-chloroaniline. Our target protein is naturally
         constitutively expressed in <i>Ochrobactrum sp. TCC-2</i> [2]. </p>
 
-      <img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/part-image.png" class="img-fluid">
-      <img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/breakdown-image.jpeg" class="img-fluid">
+      <img style="width: 90%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/part-image.png" class="img-responsive rounded mx-auto d-block mt-4">
+      <img style="width: 80%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/breakdown-image.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
 
       <p class="mt-5 sub-stuff"> <b> Design </b> <br> The fragment was designed to contain restriction sites BamHI and
         XhoI prior to the start codon and post the stop codon respectively. The fragment was also designed to contain
@@ -162,8 +162,8 @@
         The plasmid designed is as below:
       </p>
 
-      <img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/plasmid.png" class="img-fluid">
-      <img src="https://static.igem.wiki/teams/4641/wiki/design-part-page/genetic-circuit.jpeg" class="img-fluid">
+      <img style="width: 45%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/plasmid.png" class="img-responsive rounded mx-auto d-block mt-4">
+      <img style="width: 70%; height: auto;" src="https://static.igem.wiki/teams/4641/wiki/design-part-page/genetic-circuit.jpeg" class="img-responsive rounded mx-auto d-block mt-4">
 
       <p class="mt-5 MAIN-STUFF"> Implementation </p>
 
