--- a/wiki/pages/engineering.html
+++ b/wiki/pages/engineering.html
@@ -128,10 +128,13 @@
         </h4>
         <div id="collapse2" class="accordion-collapse collapse show" aria-labelledby="heading2">
           <div class="accordion-body">
-            <img
-              src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/model-which-was-used-for-this-predicted-by-alpha-fold-and-present-in-uniprot.png">
-            <center><b>Fig 1:</b> Model which was used for this (predicted by Alpha Fold and present in UniProt)
-            </center>
+            <figure>
+            <img style="width: 100%; height: auto;"
+              src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/model-which-was-used-for-this-predicted-by-alpha-fold-and-present-in-uniprot.png" class="img-responsive rounded mx-auto d-block mt-4">
+             <figcaption style="text-align:center"> <i>Fig 1: Model which was used for this (predicted by Alpha Fold and present in UniProt)
+            </i>
+      </figcaption>
+    </figure>
             <p class="sub-stuff">
               We predicted structures by different softwares like SWISS-MODEL, Alphafold and iTASSER. For the test
               stage, we proceeded with the Alphafold model as it showed the highest percentage of residues lying
@@ -147,10 +150,13 @@
       SeamDock showed ΔG values of -7.51 kcal/mol and -4.7 kcal/mol respectively. This implies that TCC has a good
       affinity towards the TccA amidase protein. <br><br>
     </p>
-    <img
+    <figure>
+    <img style="width: 70%; height: auto;"
       src="https://static.igem.wiki/teams/4641/wiki/dbtl-growth-curves/2d-visualization-of-our-docked-structure-in-discovery-studio-visualizer-dsv.jpg"
-      style="scale:0.4;">
-    <center><b>Fig 2:</b>2D visualization of our docked structure in Discovery Studio Visualizer (DSV)</center>
+      class="img-responsive rounded mx-auto d-block mt-4">
+     <figcaption style="text-align:center"> <i>2D visualization of our docked structure in Discovery Studio Visualizer (DSV)</i>
+      </figcaption>
+    </figure>
     <p class="sub-stuff">
       These ΔG values imply that there is a stable binding of TCC to the TccA amidase. This suggests that the
       predicted binding sites were correct.
