Checking if dropdown closes

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -184,7 +184,7 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
     <p class="mt-5 sub-stuff">Our team members were able to visit nine schools across the states of <b>Karnataka, Tamil
       Nadu and Maharashtra</b>.</p>
 
-    <div class="accordion">
+    <div class="accordion accordion-flush">
       <div class="accordion-item">
         <h2 class="accordion-header" id="headingOne">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne"
