--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -1522,4 +1522,11 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
   </div>
 </div>
 
+<script>
+  // Collapse all panels initially
+  $(document).ready(function(){
+    $('.collapse').collapse('hide');
+  });
+</script>
+
 {% endblock %}
