Testing again lemme try

--- a/wiki/pages/education.html
+++ b/wiki/pages/education.html
@@ -192,7 +192,7 @@ We aspire to <b>foster mutual learning and dialogue</b>, laying the foundation f
             <b>Government High School, Kopinayakkanpatti, Madurai, Tamil Nadu—Date: 03/07/2023</b>
           </button>
         </h2>
-        <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne">
+        <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne">
           <div class="accordion-body">
             <p>Our team conducted an educational session at Government High School, Kopinayakkanpatti, Madurai, Tamil
               Nadu. During this session, we engaged with a group of twenty 9th-grade students. Our primary focus was
